# nba_odds

./: .gitignore  README.md  build_features.sh  build_model.sh  main.py  pyproject.toml  requirements.txt
model/: playoff_lr_1614257158.pkl  playoff_lr_1614278563.pkl  playoff_lr_columns_1614257158.pkl  playoff_lr_columns_1614278563.pkl  preseason_lr_1614257158.pkl  preseason_lr_1614278562.pkl  preseason_lr_columns_1614278562.pkl
nba_odds/application/: build_features.py  build_models.py  build_preseason_odds.py
nba_odds/config/: config.py  params.py
nba_odds/features/: elo_rating.py  player_efficiency_rating.py  previous_season.py  teams_stats.py
nba_odds/model/: build_model.py  model_builder.py
nba_odds/preprocessing/: games_per_team.py  labels.py  players_data.py  previous_season_features.py  split_on_playoffs.py
predictions/: nba_playoff_predictions.csv  nba_preseason_predictions.csv
tests/unit_tests/features/: test_elo_rating.py
tests/unit_tests/preprocessing/: test_games_per_team.py  test_players_data.py  test_previous_season_features.py
