[tool.poetry]
name = "nba-project"
version = "0.1.0"
description = ""
authors = ["sarhakim <sahakim@ymail.com>"]

[tool.poetry.dependencies]
python = "^3.7.9"
fastparquet = "^0.5.0"
pyarrow = "^3.0.0"
pandas = "^1.2.2"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipykernel = "^5.4.3"
plotly = "^4.14.3"
nbformat = "^5.1.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
